# nativebitmap

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/chenglei/nativebitmap/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chenglei/nativebitmap/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
nativebitmap/: build.gradle
nativebitmap/src/androidTest/java/com/chenglei/nativebitmap/: ExampleInstrumentedTest.kt
nativebitmap/src/main/: AndroidManifest.xml
nativebitmap/src/main/cpp/: CMakeLists.txt  entry.cpp
nativebitmap/src/main/cpp/base/: Bitmap.h  base.h
nativebitmap/src/main/cpp/file/: native_bitmap.cpp  native_bitmap.h
nativebitmap/src/main/java/com/chenglei/nativebitmap/: NativeBitmap.kt  NativeBitmapJni.java
nativebitmap/src/test/java/com/chenglei/nativebitmap/: ExampleUnitTest.kt
